--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,7 @@
             <div>
                 <div class="control">
                     <h2 class="recentscores">Recent Scores</h2>
-                    <input type="button" value="Refresh" class="refresh" id="refresh">
+                    <input type="button" value="Refresh" class="refresh offset" id="refresh">
                 </div>
                 <ul class="board" id="board"> 
                 
@@ -24,7 +24,7 @@
                 <h3>Add your score</h3>
                 <input type="text" name="name" id="name" placeholder="your name">
                 <input type="number" name="score" id="score" placeholder="your score">
-                <input type="button" value="submit" id="submit">
+                <input type="button" value="submit" id="submit" class="offset">
             </form>
         </div>
     </main>
